--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "weather",
   "version": "1.0.0",
-  "description": "",
+  "description": "Get weather for any town",
   "scripts": {
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "axios": "^0.21.0"
+  }
 }
